--- a/.env
+++ b/.env
@@ -2,11 +2,9 @@
 # Enter in the credentials for this app into the fields below.
 
 # Sandbox
-RC_SERVER_URL        = 'https://platform.devtest.ringcentral.com'
-# Production
-#RC_SERVER_URL        = 'https://platform.ringcentral.com'
-RC_CLIENT_ID         = ''
-RC_CLIENT_SECRET     = ''
+RC_SERVER_URL        = "https://platform.devtest.ringcentral.com"
+RC_CLIENT_ID         = ""
+RC_CLIENT_SECRET     = ""
 
-RC_REDIRECT_URL = 'http://localhost:5000/oauth2callback'
+RC_REDIRECT_URL = "http://localhost:5000/oauth2callback"
 
