--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # Create an app in the RingCentral Developer Console. Make sure the app has all permissions enabled.
 # Enter in the credentials for this app into the fields below.
 
-# Sandbox
+# Sandbox Credential
 RC_SERVER_URL        = "https://platform.devtest.ringcentral.com"
 RC_CLIENT_ID         = ""
 RC_CLIENT_SECRET     = ""
 
+# Redirect URL from App Settings is set with the app under 'OAuth Redirect URI'
 RC_REDIRECT_URL = "http://localhost:5000/oauth2callback"
 
