--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Create an app in the RingCentral Developer Console. Make sure the app has all permissions enabled.
 # Enter in the credentials for this app into the fields below.
 
-# Sandbox Credential
+# Sandbox Credentials
 RC_SERVER_URL        = "https://platform.devtest.ringcentral.com"
 RC_CLIENT_ID         = ""
 RC_CLIENT_SECRET     = ""
