--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 
 # Sandbox Credentials
 RC_SERVER_URL        = "https://platform.devtest.ringcentral.com"
-RC_CLIENT_ID         = ""
-RC_CLIENT_SECRET     = ""
+RC_CLIENT_ID         = "IedYQ8YUTgafKRaBP7J9ww"
+RC_CLIENT_SECRET     = "O5RDZKCHRwO8-DAsEDZzvgvdwC9juSQF-jQf7h7FxF7A"
 
 # Redirect URL from App Settings is set with the app under 'OAuth Redirect URI'
 RC_REDIRECT_URL = "http://localhost:5000/oauth2callback"
